Fix drifting photos alignment for the grid on my page (Ivan)

--- a/resources/css/articles/ivanz.css
+++ b/resources/css/articles/ivanz.css
@@ -50,4 +50,5 @@ h2 {
 }
 .grid-images img {
     width: 350px;
+    justify-self: center;
 }
